tests/cases/scc/error/0013-macro.c.res
./tests/cases/scc/error/0013-macro.c:2:19:	error:   expected a type name.
./tests/cases/scc/error/0013-macro.c:4:1:	info:    (macro-expanded from here)
exit code 1
